--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,7 +3,7 @@ body {
     }
 
 .row {
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }   
     
 #title {
@@ -25,11 +25,11 @@ body {
 #newGame {
     background: greenyellow;
     margin-right: 15px;   
-    font-size: 30px;
+    font-size: 25px;
     text-align: center;
 }
 
-#winnLoss {
+#winnLossArea {
     background: aqua;
 
 }
@@ -39,14 +39,17 @@ body {
 }
 
 img {
-    width: 75px;
-    height: 75px;  
+    width: 60px;
+    height: 60px;  
 }
 
 #score {
     background: green;
 }
 
-#GuessedNumber {
+#addTotal {
     background: green; 
+    margin-right: 15px;   
+    font-size: 25px;
+    text-align: center;
 }
